[package]
name = "rust-compressor"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.8.0"
heapless = "0.8.0"
lazy_static = { version = "1.5.0", features = ["spin", "spin_no_std"] }
libc = "0.2"
linked_list_allocator = "0.10"
spin = "0.9.8"
tracing = "0.1.41"
tracing-core = { version = "0.1.33", default-features = false }
tracing-subscriber = "0.3.19"

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3"

[lib]
# crate-type = ["cdylib"]
crate-type = ["staticlib"]
